--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -7,10 +7,15 @@
     font-size: 30px;
     color: #1EDD88;
 }
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+
+.links li {
+  display: inline-block;
+}
+
+.footer p {
+  color: white;
+}
+
+.footer p i {
+  color: red;
 }
