--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -3,7 +3,7 @@
     padding: 60px;
     background-color: #2c2b2b;
 }
-.footer a {
+.links ul li > a {
     font-size: 30px;
     color: #1EDD88;
 }
@@ -18,4 +18,9 @@
 
 .footer p i {
   color: red;
+}
+
+.profile {
+  font-size: 16px;
+  color: #1EDD88;
 }
